# OnlineTutoringPlatform

./: .gitignore  ADMIN_MEETING_CREATION.md  ADMIN_SESSION_MANAGEMENT.md  BROADCAST_EMAIL_FEATURE.md  BROADCAST_ERROR_HANDLING.md  CANCELLED_SESSIONS_LIMIT_IMPLEMENTATION.md  CHAT_IMPLEMENTATION_SUMMARY.md  CHAT_QUICK_START.md  CHAT_SYSTEM_README.md  CLASS_DETAIL_IMPLEMENTATION.md  CLASS_SLOT_CANCELLATION_FEATURE.md  CRITICAL_TESTING_GUIDE.md  DARK_MODE_IMPLEMENTATION.md  DASHBOARD_ANALYTICS_FEATURE.md  EMAIL_NOTIFICATIONS_IMPLEMENTATION.md  HOURLY_RATE_IMPLEMENTATION.md  MASS_CLASS_PAYMENT_README.md  PAYMENT_RATES_IMPLEMENTATION.md  QUALIFICATIONS_REFACTORING.md  README.md  REVIEWS_RATINGS_FEATURE.md  SECURITY_IMPROVEMENTS.md  SESSION_CANCELLATION_TEST.md  SESSION_EMAIL_NOTIFICATIONS_COMPLETE.md  SESSION_LIFECYCLE_IMPLEMENTATION.md  STUDENTS_ENROLLMENT_FEATURE.md  TESTING_GUIDE.md  critical-test-report.html  package-lock.json  package.json  test-runner.js  test_hourly_rate.html
Agent/: README.md  pyproject.toml
Agent/src/: config.py
Agent/src/client/: agent.py  api.py
Agent/src/server/: api_client.py  main.py  tools.py
backend/: .env.example  .gitignore  EMAIL_NOTIFICATIONS.md  README.md  REMINDER_SYSTEM.md  UNIT_TESTS_DOCUMENTATION.md  UNIT_TESTS_README.md  jest.config.cjs  jest.config.js  jest.config.json  jest.setup.js  package-lock.json  package.json  setup.ts  tsconfig.json
backend/backend/: package.json
backend/prisma/: dev.db  (+5 more)
frontend/: index.html  jest.config.cjs  package-lock.json  package-test.json  package.json  tsconfig.json  vite.config.js
(+292 files in other folders)
